chore(dependabot, tailwindcss): updated tailwind to 4.x. Migrated from renovate to dependabot

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import "@/styles/global.css";
+
 import { G_ANALYTICS_TAG, G_TAG_MANAGER } from "astro:env/server";
 import { ClientRouter } from "astro:transitions";
 import { GoogleTagmanager } from "@digi4care/astro-google-tagmanager";
